# dtf_sdk

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Kconfig  LICENSE.md  README.md
certs/: dtf_root_x1.pem
examples/get_started/: README.md
examples/get_started/main/: CMakeLists.txt  main.c  wifi_connect.c  wifi_connect.h
include/c_drivers/: dtf_c_logging.h  dtf_c_ota.h  dtf_logging.h  dtf_ota.h  runtime_profiler.h
src/: serial_runtime_profiler.cpp
src/c_drivers/: dtf_logging.c  dtf_ota.c
utils/: log_parser.py  perf_view.html  perf_view.js  profiler.py
